# rust-many-git-deps

./: .gitmodules  Cargo.toml  README.md  benchmark.sh
